--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,12 @@ body {
   flex-direction: column;
 }
 
+.loading {
+  font-size: 3rem;
+  text-align: center;
+  margin-top: 30vh;
+  color: rgba(0, 0, 252, 0.418);
+}
 
 /***** HEADER *****/
 .headerTop {
@@ -87,7 +93,7 @@ justify-content: center;
 
 .musicCardItem {
   background-color: rgb(226, 248, 129);
-  margin: 40px 0;
+  margin: 10px 0;
   padding: 10px;
   /* border: 1px red solid; */
   border-radius: 20px;
