--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,200;0,300;0,400;1,100&family=Montserrat:wght@200&family=Quicksand:wght@300&family=Source+Code+Pro:wght@300&display=swap') ;
+
 body {
   background-color: rgb(250, 250, 250);
   display: flex;
   flex-direction: column;
+  font-family: Epilogue , Arial , Helvetica , sans-serif;
 }
 
 .loading {
@@ -35,6 +38,7 @@ ul {
 
 .linkNavHeader {
   color: black;
+  font-weight: 400;
   text-decoration: none;
   text-transform: uppercase;
   width: 20px;
